# tf_flash_attention

./: MANIFEST.in  README.md  pyproject.toml  setup.py
flash_attention/: flash_attention.py
flash_attention/kernel/: Makefile  flash_attention.cu  flash_attention.h  flash_attention_backward.cc  flash_attention_forward.cc  internal_test.cu  macro_util.h  sync_methods.cc  sync_methods.h  tf_type_declaration.h  type_mapping.h  type_util.h
flash_attention/kernel/cute_ext/: algorithms.h  boundary_check_pred.h
flash_attention/kernel/cutlass-3.5.0/include/cute/: pointer.hpp
flash_attention/kernel/cutlass-3.5.0/include/cute/util/: type_traits.hpp
flash_attention/tests/: test_1d.py  test_2d.py  test_base.py
